Переделка адаптивки для HomePage. Замена изображений иконок на векторные

--- a/src/assets/stylesheets/global.css
+++ b/src/assets/stylesheets/global.css
@@ -18,37 +18,9 @@ a {
 }
 
 .wrap-prop {
-    width: 1470px;
+    min-width: 375px;
+    max-width: 1470px;
     padding: 0 20px;
-    margin: 0 auto;
+    margin-inline: auto;
 }
 
-@media screen and (max-width: 1600px) {
-    .wrap-prop {
-        width: 1200px;
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .wrap-prop {
-        width: 970px;
-    }
-}
-
-@media screen and (max-width: 1050px) {
-    .wrap-prop {
-        width: 650px;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .wrap-prop {
-        width: 500px;
-    }
-}
-
-@media screen and (max-width: 550px) {
-    .wrap-prop {
-        width: 335px;
-    }
-}
